# skillshome-desktop

./: .gitmodules  README.md  package-lock.json  package.json
.github/workflows/: release.yml
sidecar/: .npmrc  package-lock.json  package.json  tsconfig.json
sidecar/src/: confirm-staged-ingestion.ts  mcpClient.ts  resolveExtractionConfig.ts  run-local-extraction-and-stage.ts  run-local-extraction.ts  run-project-sync.ts
sidecar/src/__tests__/: mcpClient.test.ts  resolveExtractionConfig.test.ts  runProjectSync.test.ts
src/: App.tsx
src-tauri/: .env.example  .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: backend_client.rs  github_device.rs  google.rs  mod.rs  pkce.rs  silent_refresh.rs  state.rs  token_store.rs
src-tauri/src/extraction/: check.rs  mod.rs  settings.rs
src-tauri/src/ingest/: mod.rs  sidecar.rs
src-tauri/src/projectsync/: grants.rs  mod.rs
src/auth/: HomeScreen.tsx  SigninScreen.tsx  useSignin.ts
src/errors/: mapDesktopError.ts
src/extraction/: ExtractionSettingsScreen.tsx  LocalModelDisclaimerBanner.tsx  useExtractionSettings.ts
src/ingest/: ExtractionProgressScreen.tsx  ReviewConfirmScreen.tsx  SourcePickerScreen.tsx  useLocalExtraction.ts  useServerFallbackIngest.ts
src/project-sync/: ConnectedProjectsScreen.tsx  useProjectSync.ts
